--- a/style.css
+++ b/style.css
@@ -66,14 +66,12 @@ body {
   position: relative;
   width: 100%;
   height: auto;
-}
-      .swiper-slide {
-          width: 100%;
-          height: 800px;
-          object-fit: cover;
-          display: none;
-          display: block;
-      }    
+}   
+      .swiper-container .swiper-slide img{
+        max-width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
   
 
   .swiper-container .inner {
@@ -82,6 +80,7 @@ body {
       left: 0;
       right: 0;
       margin: auto;
+      z-index: 50;
   }
 
      .swiper-container dl {
@@ -118,7 +117,7 @@ body {
       .swiper-button-prev {
           position: absolute;
           top: 50%;
-          left: 0;
+          left: 50px;
           padding: 25px;
           background-color: ivory;
           border-radius: 30px;
@@ -127,10 +126,15 @@ body {
       .swiper-button-next {
           position: absolute;
           top: 50%;
-          right: 0;
+          right: 50px;
           padding: 25px;
           background-color: ivory;
           border-radius: 30px;
+      }
+
+      .swiper-pagination{
+        position: absolute;
+        top: 650px;
       }
 
       .index-btn-wrapper {
@@ -200,7 +204,7 @@ body {
     padding: 16px 16px 28px 16px;
     width: calc(33.333% - 100px / 3);
 }
-.card-item::nth-child(3){
+.card-item::nth-child(3n){
     margin-right: 0;
 }
 .card img{
@@ -210,9 +214,6 @@ body {
     font-size: 2em;
     margin-top: 26px;
     margin-bottom: 20px;
-}
-.card-item-text{
-    font-size: 1.6em;
 }
 #news{
     background-color: #ffffff;
